--- a/VAO/bin/AndroidManifest.xml
+++ b/VAO/bin/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cofradia.vao.EventDetails"
+            android:name="events.EventDetails"
             android:label="@string/title_activity_event_details" >
         </activity>
     </application>
