--- a/VAO_WEBSERVICE/Gemfile
+++ b/VAO_WEBSERVICE/Gemfile
@@ -6,6 +6,7 @@ gem 'rails', '3.2.13'
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
 gem 'mysql2', '0.3.11'
+gem 'pg'
 gem 'paperclip', '3.4.2'
 gem 'devise', '2.2.4'
 
