--- a/VAO_WEBSERVICE/config/database.yml
+++ b/VAO_WEBSERVICE/config/database.yml
@@ -27,11 +27,9 @@ test:
   socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: vao
+  adapter: postgresql
+  encoding: unicode
+  database: myapp_development
   pool: 5
-  username: root
-  password: password
-  socket: /var/run/mysqld/mysqld.sock
+  username: myapp
+  password: password1
