--- a/VAO_WEBSERVICE/Gemfile
+++ b/VAO_WEBSERVICE/Gemfile
@@ -9,6 +9,7 @@ gem 'mysql2', '0.3.11'
 gem 'pg'
 gem 'paperclip', '3.4.2'
 gem 'devise', '2.2.4'
+gem 'rails_12factor', group: :production
 
 # Gems used only for assets and not required
 # in production environments by default.
