--- a/VAO_GENERATOR/.classpath
+++ b/VAO_GENERATOR/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/home/katy/Documentos/SDKS_VAO/greendao-generator-1.3.0.jar"/>
-	<classpathentry kind="lib" path="/home/katy/Documentos/SDKS_VAO/greendao-generator-1.3.0-sources.jar"/>
-	<classpathentry kind="lib" path="/home/katy/Documentos/SDKS_VAO/freemarker-2.3.20.jar"/>
+	<classpathentry kind="lib" path="libs/freemarker-2.3.20.jar"/>
+	<classpathentry kind="lib" path="libs/greendao-generator-1.3.0-sources.jar"/>
+	<classpathentry kind="lib" path="libs/greendao-generator-1.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
