--- a/VAO/.classpath
+++ b/VAO/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="src" path="src-gen"/>
-	<classpathentry kind="lib" path="/home/katy/Documentos/SDKS_VAO/freemarker-2.3.20.jar"/>
-	<classpathentry kind="lib" path="/home/katy/Documentos/SDKS_VAO/greendao-generator-1.3.0-sources.jar"/>
-	<classpathentry kind="lib" path="/home/katy/Documentos/SDKS_VAO/greendao-generator-1.3.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DaoExample"/>
+	<classpathentry kind="lib" path="libs/freemarker-2.3.20.jar"/>
+	<classpathentry kind="lib" path="libs/greendao-generator-1.3.0-sources.jar"/>
+	<classpathentry kind="lib" path="libs/greendao-generator-1.3.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
