--- a/VAO/bin/AndroidManifest.xml
+++ b/VAO/bin/AndroidManifest.xml
@@ -7,12 +7,15 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
+        android:allowTaskReparenting="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:requiredForAllUsers="false"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cofradia.vao.MainActivity"
@@ -24,11 +27,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="events.EventDetails"
+            android:name="com.cofradia.vao.events.EventDetail"
             android:label="@string/title_activity_event_details" >
         </activity>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="com.facebook.LoginActivity" android:label="@string/appName"></activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/appName" >
+        </activity>
+        <activity
+            android:name="com.cofradia.vao.events.EventCreation"
+            android:label="@string/title_activity_event_creation" >
+        </activity>
     </application>
 
 </manifest>
