--- a/VAO/.classpath
+++ b/VAO/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DaoExample"/>
 	<classpathentry kind="lib" path="libs/freemarker-2.3.20.jar"/>
-	<classpathentry kind="lib" path="libs/greendao-generator-1.3.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/greendao-generator-1.3.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/katy/COFRADIA/vao/VAO/libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
