--- a/VAO/AndroidManifest.xml
+++ b/VAO/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -27,8 +28,20 @@
             android:name="com.cofradia.vao.events.EventDetail"
             android:label="@string/title_activity_event_details" >
         </activity>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
-        <activity android:name="com.facebook.LoginActivity" android:label="@string/appName"></activity>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name="com.cofradia.vao.LoginUsingLoginFragmentActivity" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity
+            android:name="com.cofradia.vao.events.EventList"
+            android:label="@string/title_activity_event_list" >
+        </activity>
     </application>
 
 </manifest>
