--- a/VAO/project.properties
+++ b/VAO/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../facebook-android-sdk-3.6.0/facebook
+android.library.reference.1=../EXTRAS/facebook-android-sdk-3.6.0/facebook
