--- a/VAO/AndroidManifest.xml
+++ b/VAO/AndroidManifest.xml
@@ -28,7 +28,11 @@
         </activity>
         <activity
             android:name="com.cofradia.vao.events.EventDetail"
-            android:label="@string/title_activity_event_details" >
+            android:label="@string/title_activity_event_details"
+            android:parentActivityName="com.cofradia.vao.events.EventList" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cofradia.vao.events.EventList" />
         </activity>
         <activity
             android:name="com.facebook.LoginActivity"
