--- a/VAO/AndroidManifest.xml
+++ b/VAO/AndroidManifest.xml
@@ -2,14 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cofradia.vao"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
+   	<uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    
     <application
         android:allowBackup="true"
         android:allowTaskReparenting="true"
@@ -43,6 +51,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
+        <meta-data
+   			android:name="com.google.android.gms.version"
+    		android:value="@integer/google_play_services_version" />
 
         <activity
             android:name="com.cofradia.vao.events.EventCreation"
@@ -68,6 +79,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cofradia.vao.events.EventList" />
         </activity>
+        <meta-data 
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAWaJZqAtIjeirnrXbu31AeRzpcqfzBGh8"
+            />
     </application>
 
 </manifest>
