--- a/VAO_WEBSERVICE/Gemfile
+++ b/VAO_WEBSERVICE/Gemfile
@@ -9,6 +9,7 @@ gem 'mysql2', '0.3.11'
 gem 'pg'
 gem 'paperclip', '3.4.2'
 gem 'devise', '2.2.4'
+gem 'schema_plus'
 gem 'rails_12factor', group: :production
 
 # Gems used only for assets and not required
@@ -22,7 +23,7 @@ group :assets do
 
   gem 'uglifier', '>= 1.0.3'
 end
-
+Untitled Folder 2
 gem 'jquery-rails'
 
 # To use ActiveModel has_secure_password
